--- a/index.html
+++ b/index.html
@@ -492,22 +492,10 @@ footer {
       <span class="mn">qwen3-32b</span>
       <span class="md2">Qwen 3 · 32B · reasoning</span>
     </div>
-    <div class="mo" onclick="selModel('deepseek-r1-distill-llama-70b','deepseek-r1-70b')">
-      <span class="mn">deepseek-r1-distill-llama-70b</span>
-      <span class="md2">DeepSeek R1 · цепочка мыслей</span>
-    </div>
-    <div class="mo" onclick="selModel('deepseek-r1-distill-qwen-32b','deepseek-r1-32b')">
-      <span class="mn">deepseek-r1-distill-qwen-32b</span>
-      <span class="md2">DeepSeek R1 Qwen · 32B</span>
-    </div>
     <div class="msel-group">📦 ДРУГИЕ</div>
-    <div class="mo" onclick="selModel('mixtral-8x7b-32768','mixtral-8x7b')">
-      <span class="mn">mixtral-8x7b-32768</span>
-      <span class="md2">Mistral · 32k контекст</span>
-    </div>
-    <div class="mo" onclick="selModel('gemma2-9b-it','gemma2-9b')">
-      <span class="mn">gemma2-9b-it</span>
-      <span class="md2">Google Gemma 2 · 9B</span>
+    <div class="mo" onclick="selModel('moonshotai/kimi-k2-instruct-0905','kimi-k2')">
+      <span class="mn">kimi-k2-instruct</span>
+      <span class="md2">Moonshot AI · Kimi K2</span>
     </div>
   </div>
 </div>
